--- a/public/index.html
+++ b/public/index.html
@@ -21,8 +21,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Reittiloki</title>
-    <script type="text/javascript" src="/sniffer.min.js"></script>
-    <script type="text/javascript" src="/pre.js"></script>
+    <script type="text/javascript" src="%PUBLIC_URL%/sniffer.min.js"></script>
+    <script type="text/javascript" src="%PUBLIC_URL%/pre.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
