--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#007ac9" />
-    <meta name="description" content="HSL Reittiloki - Liikenteenvalvontatyökalu" />
+    <meta name="description" content="HSL Reittiloki" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -20,7 +20,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Reittiloki</title>
+    <title>HSL Reittiloki</title>
     <script type="text/javascript" src="%PUBLIC_URL%/sniffer.min.js"></script>
     <script type="text/javascript" src="%PUBLIC_URL%/pre.js"></script>
   </head>
